class Bonus {
  const Bonus();
}

class LuckyBonus extends Bonus {
  const LuckyBonus();
}

class ExperienceBonus extends Bonus {
  const ExperienceBonus();
}

class MoneyBonus extends Bonus {
  const MoneyBonus();
}

class HealthBonus extends Bonus {
  const HealthBonus();
}

class StaminaBonus extends Bonus {
  const StaminaBonus();
}

class AimBonus extends Bonus {
  const AimBonus();
}

class SpeedBonus extends Bonus {
  const SpeedBonus();
}
